--- a/.gitignore
+++ b/.gitignore
@@ -1,44 +1,46 @@
-# Ignore some static files and directories.
-/.settings/
-/.buildpath
+# Base ignore
 /.project
-/.htaccess
-/CJzip.php
-/config.php
-/CHANGELOG.txt
-/COPYRIGHT.txt
-/CONTRIBUTING.md
-/favicon.ico
-/index.php
-/LICENSE.txt
-/mainfile.php
-/robots.php
-/robots.txt
-/web.config
-/admin/
-/data/
-/includes/
-/install/
-/language/
-/uploads/
-/assets/
-/README.md
+/.buildpath
+/.settings
+/data/cache/
+/data/config/diagnostic-*.xml
+/data/logs/*
+/data/logs/data_logs/
+/data/logs/error_logs/
+/data/logs/ip_logs/
+/data/logs/ref_logs/
+/data/logs/voting_logs/
+/data/tmp/
 
-# Ignore fix module files and directories.
-/modules/*
-!/modules/nvtools
-!/modules/nvtools/*
-/themes/*
-!/themes/admin_default/css/nvtools.css
-!/themes/admin_default/images/nvtools
-!/themes/admin_default/images/nvtools/*
-!/themes/admin_default/modules/nvtools
-!/themes/admin_default/modules/nvtools/*
-!/themes/default/css/nvtools.css
-!/themes/default/images/nvtools
-!/themes/default/images/nvtools/*
-!/themes/default/modules/nvtools
-!/themes/default/modules/nvtools/*
-/vendor/
-/composer.json
-/.gitattributes
+composer.lock
+#vendor test ignore
+/vendor/**/demo/
+/vendor/**/example/
+/vendor/**/examples/
+/vendor/**/Examples/
+/vendor/**/test/
+/vendor/**/tests/
+/vendor/**/Tests/
+/vendor/**/travis*
+/vendor/**/.travis.yml
+/vendor/**/.scrutinizer.yml
+/vendor/**/phpunit.xml*
+/vendor/**/phpunit.php
+
+#vendor docs ignore
+/vendor/**/doc/
+/vendor/**/docs/
+/vendor/**/Documentation/
+/vendor/**/readme*
+/vendor/**/README*
+/vendor/**/changelog*
+/vendor/**/CHANGELOG*
+/vendor/**/FAQ*
+/vendor/**/CONTRIBUTING*
+/vendor/**/HISTORY*
+/vendor/**/UPGRADING*
+/vendor/**/UPGRADE*
+/vendor/**/package*
+/vendor/**/phpunit.php
+/vendor/**/.gitignore
+/vendor/**/composer.*
